# kutuzov_text2image

./: CProGAN.py  config.py  pyproject.toml  test.ipynb  train.py  utils.py
DIffusion/modules/: attention.py  clip.py  decoder.py  encoder.py
GANmetod/: CProGAN.py  config.py  discriminator.py  generator.py  test.ipynb  train.py  utils.py
